# SelfGoverningShip

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/AbstractFactory/: CMakeLists.txt  CreateStrategy.cpp  CreateStrategy.hpp  StrategyFactory.cpp  StrategyFactory.hpp
src/AbstractFactory/BackWind/: BackWindStrategyFactory.cpp  BackWindStrategyFactory.hpp
src/AbstractFactory/FrontWind/: FrontWindStrategyFactory.cpp  FrontWindStrategyFactory.hpp
src/AbstractFactory/SideWind/: SideWindStrategyFactory.cpp  SideWindStrategyFactory.hpp
src/Actuators/: Actionneur.cpp  Actionneur.hpp
src/Captors/Central/: Central.cpp  Central.hpp
src/Captors/Gps/: Gps.cpp  Gps.hpp  initGps.sh
src/Captors/Vane/: Vane.cpp  Vane.hpp
src/Handler/: Handler.cpp  Handler.hpp
src/Handler/Factory/: .subla05.tmp  HandlerFactory.cpp  HandlerName.hpp
src/Handler/Helm/: HelmHandler.cpp  HelmHandler.hpp
src/Handler/PyScriptHandler/: PyScriptHandler.cpp  PyScriptHandler.hpp
src/Modele/: Modele.cpp  Modele.hpp
src/MoveStyle/: MoveStyle.cpp  MoveStyle.hpp
src/MoveStyle/BackWind/: BackWind.cpp  BackWind.hpp
src/MoveStyle/Factory/: MoveStyleFactory.cpp  MoveStyleFactory.hpp
src/MoveStyle/FrontWind/: FrontWind.cpp  FrontWind.hpp
src/MoveStyle/SideWind/: SideWind.cpp  SideWind.hpp
src/Observer/: Observable.cpp  Observable.hpp  Observer.cpp  Observer.hpp
src/PyScriptManager/: PyScriptManager.cpp  PyScriptManager.hpp
src/Singleton/: Singleton.cpp  Singleton.hpp
src/Tools/: Coordinate.cpp  Coordinate.hpp  Data.hpp  Logger.cpp  Logger.hpp  Parsser.cpp  Parsser.hpp
(+18 files in other folders)
